k8s-manifests/03-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp-depl
  namespace: demoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels: 
        app: demoapp
    spec:
      containers:
        - name: b2l-app
          image: ghcr.io/xamma/demoapp:latest
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name:  ghcr-secret
      restartPolicy: Always
