k8s-manifests/06-mongodb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: demoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-data
      restartPolicy: Always

# allows connection to svc-name.ns.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: demoapp
spec:
  selector:
    app: mongodb
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
